--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 </head>
 <body>
+<!-- TEST -->
 
     <!-- INIZIO HEADER -->
     <header class="main-header">
