FEAT home-search-lib button + logo style

--- a/index.html
+++ b/index.html
@@ -29,18 +29,21 @@
                     Home
                  </span>
                 </span>
-
+            </div>
+            <div class="home-search-lib">
                 <span class="cerca">
                  <img src="./img/search.svg" alt="">
                  <span class="txt-home-search-lib black-grey">
                     Cerca
                  </span>
                 </span>
+            </div>
+            <div class="home-search-lib">    
                 <span class="lib">
+                    <img src="./img/libreria.svg" alt="">
                     <span class="txt-home-search-lib black-grey">
                         La tua libreria
                     </span>
-                    <img src="./img/libreria.svg" alt="">
                 </span>
             </div>
         </div>
