FEAT add left-bar div + style

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- INIZIO HEADER -->
     <header class="main-header">
-        <div class="sidebar-left">
+        <div class="top-sidebar-left">
             <div class="logo">
               <img src="img/logo.svg" alt="" class="logo-big logo-display-none logo-display-block">
               <img src="img/logo-small.svg" alt="" class="small-logo  small-logo-display-none">
@@ -46,6 +46,18 @@
                     </span>
                 </span>
             </div>
+        </div>
+        <div class="bottom-sidebar-left">
+            <h4 class="playlist-title white">
+                PLAYLIST
+            </h4>
+            <ul>
+                <a href="#">
+                 <i class="fa-solid fa-plus bg-grey black playlist-add-button"></i>
+                 <span class="grey bold add-playlist-text"> Crea Playlist</span>
+                </a>
+            </ul>
+
         </div>
             
        
