FIX upgrade position + add navbar containerbig

--- a/index.html
+++ b/index.html
@@ -149,7 +149,51 @@
             </a>
         </div>
         <div class="container-big">
+            <nav class="album-nav">
+                <ul class="grey bold">
+                    <a href="#">
+                        <li>
+                            IN EVIDENZA
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li>
+                            PODCAST
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li>
+                            CLASSIFICHE
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li>
+                            GENERI E MOOD
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li>
+                            NUOVE USCITE
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li>
+                            SCOPRI
+                        </li>
+                    </a>
+                </ul>
+            </nav>
+            <div class="recent">
+                
+            </div>
 
+            <div class="for-u">
+
+            </div>
+
+            <div class="famous-artist">
+
+            </div>
         </div>
     </main>
     <!-- FINE MAIN -->
