FEAT add album img and fix h2 recent

--- a/index.html
+++ b/index.html
@@ -183,12 +183,32 @@
                     </a>
                 </ul>
             </nav>
+            <h2 class="white bold title-album-type">
+                Ascoltate di recente
+            </h2>
             <div class="recent">
-                
+                <a href="#">
+                        <img src="./img/metal_lifting.jpg" alt="">
+                        <h3 class="album-title bold white txt-center">
+                            Heavy Metal
+                        </h3>
+                        <p class="grey txt-center artist">
+                            Subtitle
+                        </p>
+                    </a>
+                    <a href="#">
+                        <img src="./img/stranger.jpeg" alt="">
+                        <h3 class="album-title bold white txt-center">
+                            Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)
+                        </h3>
+                        <p class="grey txt-center artist">
+                            Kyle Dixon & Micheal Stein
+                        </p>
+                    </a>
             </div>
 
             <div class="for-u">
-
+                
             </div>
 
             <div class="famous-artist">
