FEAT add for-u album

--- a/index.html
+++ b/index.html
@@ -205,12 +205,75 @@
                             Kyle Dixon & Micheal Stein
                         </p>
                     </a>
+                    <a href="#">
+                        <img src="./img/aquietplace.jpeg" alt="">
+                        <h3 class="album-title bold white txt-center">
+                            A quiet place
+                        </h3>
+                        <p class="grey txt-center artist">
+                            Subtitle
+                        </p>
+                    </a>
+                    <a href="#">
+                        <img src="./img/split.jpeg" alt="">
+                        <h3 class="album-title bold white txt-center">
+                             Split
+                        </h3>
+                        <p class="grey txt-center artist">
+                            Subtitle
+                        </p>
+                    </a>
+                    <a href="#">
+                        <img src="./img/cure.jpeg" alt="">
+                        <h3 class="album-title bold white txt-center">
+                            A cure for wellness
+                        </h3>
+                        <p class="grey txt-center artist">
+                            Subtitle
+                        </p>
+                    </a>
+                    <a href="#">
+                        <img src="./img/sinister.jpeg" alt="">
+                        <h3 class="album-title bold white txt-center">
+                            Sinister
+                        </h3>
+                        <p class="grey txt-center artist">
+                            Subtitle
+                        </p>
+                    </a>
             </div>
 
+            <div class="for-u-title title-album-type">
+                <h2 class="white bold">
+                    Creato per Alberto Zappal&agrave;
+                </h2>
+                <p class="grey">
+                    Pi&ugrave; ascolti, pi&ugrave; accurati saranno i suggerimenti.
+                </p>
+            </div>
             <div class="for-u">
-                
+                <a href="#">
+                    <img src="./img/radar.jpeg" alt="">
+                    <h3 class="album-title bold white txt-center">
+                        Release Radar
+                    </h3>
+                </a>
+                <a href="#">
+                    <img src="./img/mixdaily.jpeg" alt="">
+                    <h3 class="album-title bold white txt-center">
+                        Daily Mix 1
+                    </h3>
+                </a>
             </div>
 
+            <div class="famous-title title-album-type">
+                <h2 class="white bold">
+                    Artisti pi&ugrave; popolari
+                </h2>
+                <p class="grey">
+                    Pi&ugrave; ascolti, pi&ugrave; accurati saranno i suggerimenti.
+                </p>
+            </div>
             <div class="famous-artist">
 
             </div>
