FIX mobile visual body

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </a>
                 </ul>
             </nav>
-            <h2 class="white bold title-album-type">
+            <h2 class="white bold title-album-type title-section-album">
                 Ascoltate di recente
             </h2>
             <div class="recent">
@@ -244,7 +244,7 @@
             </div>
 
             <div class="for-u-title title-album-type">
-                <h2 class="white bold">
+                <h2 class="white bold title-section-album">
                     Creato per Alberto Zappal&agrave;
                 </h2>
                 <p class="grey">
@@ -267,7 +267,7 @@
             </div>
 
             <div class="famous-title title-album-type">
-                <h2 class="white bold">
+                <h2 class="white bold title-section-album">
                     Artisti pi&ugrave; popolari
                 </h2>
                 <p class="grey">
@@ -275,7 +275,18 @@
                 </p>
             </div>
             <div class="famous-artist">
-
+                <a href="#">
+                    <img src="./img/giovanni-muc.jpeg" class="" alt="">
+                    <h3 class="album-title bold white txt-center">
+                        Giovanni Muciaccia
+                    </h3>
+                </a>
+                <a href="#">
+                    <img src="./img/salvatore-aranz.jpeg" class="" alt="">
+                    <h3 class="album-title bold white txt-center">
+                        Salvatore Aranzulla
+                    </h3>
+                </a>
             </div>
         </div>
     </main>
